# srrg2_slam_interfaces

./: .gitignore  README.md
srrg2_slam_interfaces/: CMakeLists.txt  README.md  package.xml
srrg2_slam_interfaces/doc/: Doxygen
srrg2_slam_interfaces/src/: CMakeLists.txt
srrg2_slam_interfaces/src/srrg2_slam_interfaces/: CMakeLists.txt  instances.cpp  instances.h
srrg2_slam_interfaces/src/srrg2_slam_interfaces/initializers/: initializer.h  initializer_camera.h
srrg2_slam_interfaces/src/srrg2_slam_interfaces/mapping/: local_map.cpp  local_map.h  merger.h  merger_correspondence_homo.h  merger_correspondence_homo_impl.cpp  scene_clipper.h
srrg2_slam_interfaces/src/srrg2_slam_interfaces/mapping/local_map_splitting_criterions/: local_map_splitting_criterion_base.hpp  local_map_splitting_criterion_rotation.hpp  local_map_splitting_criterion_translation.hpp  local_map_splitting_criterion_viewpoint.hpp  local_map_splitting_criterion_visibility.hpp
srrg2_slam_interfaces/src/srrg2_slam_interfaces/motion_models/: motion_model_base.hpp  motion_model_constant_velocity.hpp
srrg2_slam_interfaces/src/srrg2_slam_interfaces/raw_data_preprocessors/: raw_data_preprocessor.h  raw_data_preprocessor_odom.cpp  raw_data_preprocessor_odom.h  raw_data_preprocessor_tracker_estimate.hpp
srrg2_slam_interfaces/src/srrg2_slam_interfaces/registration/: correspondence_finder.h  loop_closure.h
srrg2_slam_interfaces/src/srrg2_slam_interfaces/registration/aligners/: aligner.h  aligner_slice_motion_model.hpp  aligner_slice_odometry_prior.cpp  aligner_slice_odometry_prior.h  aligner_slice_processor.h  aligner_slice_processor_base.h  aligner_slice_processor_impl.cpp  (+7 more)
srrg2_slam_interfaces/src/srrg2_slam_interfaces/system/: multi_graph_slam.h  multi_graph_slam_impl.cpp
srrg2_slam_interfaces/src/srrg2_slam_interfaces/trackers/: multi_tracker.h  multi_tracker_impl.cpp  tracker.cpp  tracker.h  tracker_slice_processor.h  tracker_slice_processor_base.h  tracker_slice_processor_base_impl.cpp  tracker_slice_processor_estimation_buffer.hpp  tracker_slice_processor_impl.cpp  tracker_slice_processor_odom.h  tracker_slice_processor_prior.h
srrg2_slam_interfaces/src/srrg_slam_interfaces/: CMakeLists.txt  aligner.cpp  aligner.h  aligner_termination_criteria_standard.h  aligner_termination_criteria_standard_impl.cpp  correspondence_finder.cpp  correspondence_finder.h  instances.cpp  instances.h  local_map.cpp  local_map.h  loop_closure.h  loop_detector.h  measurement_adaptor.h  measurement_adaptor_odom.cpp  measurement_adaptor_odom.h  measurement_adaptor_tracker_estimate.hpp  merger.cpp  merger.h  merger_correspondence_homo.cpp  merger_correspondence_homo.h  multi_aligner.h  multi_aligner_impl.cpp  multi_aligner_slice.h  multi_aligner_slice_impl.cpp  multi_aligner_slice_motion_model.hpp  multi_aligner_slice_prior.h  multi_aligner_slice_prior_impl.cpp  multi_graph_slam.h  multi_graph_slam_impl.cpp  multi_loop_detector_brute_force.h  multi_loop_detector_brute_force_impl.cpp  multi_loop_detector_hbst.h  multi_loop_detector_hbst_impl.cpp  multi_relocalizer.h  multi_relocalizer_impl.cpp  multi_tracker.h  multi_tracker_impl.cpp  multi_tracker_slice.h  multi_tracker_slice_estimation_buffer.hpp  (+7 more)
srrg2_slam_interfaces/src/srrg_slam_interfaces/initializers/: initializer.h  initializer_camera.h
srrg2_slam_interfaces/src/srrg_slam_interfaces/local_map_selectors/: local_map_selector.h  local_map_selector_breadth_first.h  local_map_selector_breadth_first_impl.cpp  local_map_selector_user_defined.h  local_map_selector_user_defined_impl.cpp
srrg2_slam_interfaces/src/srrg_slam_interfaces/local_map_splitting_criterions/: local_map_splitting_criterion_base.hpp  local_map_splitting_criterion_rotation.hpp  local_map_splitting_criterion_translation.hpp  local_map_splitting_criterion_viewpoint.hpp  local_map_splitting_criterion_visibility.hpp
srrg2_slam_interfaces/src/srrg_slam_interfaces/motion_models/: motion_model_base.hpp  motion_model_constant_velocity.hpp
srrg2_slam_interfaces/tests/: CMakeLists.txt  test_local_map_splitting_criterion.cpp  test_motion_model.cpp  test_motion_model_slice.cpp
(+13 files in other folders)
