<?xml version="1.0"?>
<package format="2">
  <name>srrg2_slam_interfaces</name>
  <version>0.0.0</version>
  <description>srrg2_slam_interfaces</description>
  <maintainer email="giorgio@todo.todo">giorgio</maintainer>
  <license>BSD-4</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  <depend>srrg2_solver</depend>
  <depend>srrg_hbst</depend>
</package>

